Update: Valorant Page: Event Highlight, Newsletter update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/nail-icon.svg" />
+    <link rel="icon" type="image/png" href="/Kizko_profile_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Klawed by Kiz | Bespoke Nail Artistry</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
